# derbynames_zappa

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  manage.py  pyproject.toml  requirements.txt  zappa_settings.json
.github/workflows/: django.yml
derbynames/: asgi.py  settings.py  urls.py  wsgi.py
derbynames/names/: admin.py  apps.py  models.py  views.py
derbynames/names/migrations/: 0001_initial.py  0002_derbyname_metadata.py  0003_derbyjersey.py  0004_alter_derbyjersey_metadata.py
derbynames/names/templates/names/: base.html  detail.html  index.html  jersey_grid.html
