[project]
name = "derbynames-zappa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-environ>=0.12.0",
    "django-s3-sqlite>=0.0.5",
    "zappa>=0.60.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
